fixigin bad positioning of menu on smaller laptops

--- a/main.css
+++ b/main.css
@@ -43,6 +43,8 @@ body {
 }
 
 main {
+    width: 100%;
+    height: 100%;
     opacity: 0.2;
     animation: fadeIn 0.5s;
     animation-fill-mode: forwards;
@@ -281,5 +283,13 @@ a {
 @media screen and (max-width: 1655px) {
     .profile_content_menu_button {
         width: 9%;
+    }
+}
+
+@media screen and (max-height: 800px) {
+    #profile_content {
+        position: absolute;
+        height:30%;
+        bottom: 10%;
     }
 }
